it's formReset not resetForm

--- a/index-v2.html
+++ b/index-v2.html
@@ -110,7 +110,7 @@
           <!-- <input type="checkbox" id="download" title="Download comparison results as a CSV file">&nbsp;&nbsp; -->
           <input type='submit' id='form-submit' value='Submit' title="Form Submit Button">
           &nbsp;&nbsp;
-          <input type="reset" value='Reset Form' title="Form Reset Button" onclick="javascript:pageActions.resetForm();">
+          <input type="reset" value='Reset Form' title="Form Reset Button" onclick="javascript:pageActions.formReset();">
 
         </td>
       </tr>
