samples and analytics

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       event.preventDefault();
       tracker.push({
         event: 'form-submit',
-        form_name: "call-compare-v2"
+        form_name: "call-compare"
       });
 
       window.testCount = 0;
